--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,13 @@
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  height: 80px;
   pointer-events: none;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 240px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +21,11 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.App-nav ul {
+  padding: 0;
+  list-style-type: none;
 }
 
 @keyframes App-logo-spin {
